utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/valid/ArtifactNameProduct.ac
package valid

product ArtifactNameProduct {
    path "some/awesome/path" resolved from CWD
}
