utilities/Sol/modules/grammars/artifact/src/test/resources/cocos/invalid/ArtifactNameProduct.ac
package invalid

product artifactNameProduct {
    path "some/awesome/path" resolved from CWD
}
